# httpgogui

./: CHANGELOG.md  README.md  pyproject.toml
httpgogui/: main.py
httpgogui/cache/: sqlite_db.py
httpgogui/components/: table_widget.py
httpgogui/layout/: body.py  bottom.py
httpgogui/thread/: request_thread.py
httpgogui/utils/: header_list.py
httpgogui/utils/enum/: error.py
src/: main.py
src/components/: table_widget.py
src/layout/: body.py  header.py
