[project]
name = "httpgo-gui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tang", email = "357965604@qq.com"},
]
dependencies = ["pyside6==6.8.1", "requests>=2.32.3", "PySide6-Fluent-Widgets>=1.7.4"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
